--- a/app/src/main/res/layout/activity_audio_converted_files.xml
+++ b/app/src/main/res/layout/activity_audio_converted_files.xml
@@ -10,5 +10,5 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/material_dynamic_primary99" />
+        android:background="#FFF9FCFF" />
 </androidx.constraintlayout.widget.ConstraintLayout>
