--- a/app/src/main/res/layout/activity_play_audio_files.xml
+++ b/app/src/main/res/layout/activity_play_audio_files.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/material_dynamic_primary95"
+    android:background="#FFE0F3FF"
     tools:context=".PlayAudioFiles">
 
     <TextView
