--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
-    android:background="@color/material_dynamic_primary99"
+    android:background="#FFF9FCFF"
     tools:context=".VideoActivity">
 
     <ScrollView
